Upgrade Java toolchain from version 17 to version 21